--- a/src/index.html
+++ b/src/index.html
@@ -10,25 +10,26 @@
 <body style="width: 100%; background-color:  #F7F7F7; font-family: 'Montserrat', sans-serif;" >
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
     rel="stylesheet">
-      <table style="background-color: #F72345; max-width: 640px; border-left: 2px solid #e6e6e6; border-right: 2px solid #e6e6e6;" align="center"  width="100%" cellspacing="0" cellpadding="0">
+      <table style="background-color:  #FFFFFF; max-width: 640px; border-left: 2px solid #e6e6e6; border-right: 2px solid #e6e6e6;" align="center"  width="100%" cellspacing="0" cellpadding="0">
         <thead align="center">
           <tr>
-            <td style="text-align: center; padding: 18px;"  >
+            <td style="text-align: center; padding: 20px;"  >
         <a href="https://www.falke.com/de_de/">
-          <img src="./images/logo_falke.png" alt="FALKE" style="max-width: 30px; 
+          <img src="./images/logo_falke.png" alt="FALKE" style="max-width: 150px; 
           width: 100vw;
-          height: auto;"/>
+          height: auto; 
+          margin: 20px;"/>
         </a>
       </td>
       </tr>
       <tr>
         <td>
-        <h1> TSG 1899 Hoffenheim & FALKE</h1>
+        <h1 style="text-align: center !important; font-size: 25px; letter-spacing: 1px; margin-top: 5px; margin-bottom: 10px;"> TSG 1899 Hoffenheim & FALKE</h1>
       </td>
       </tr>
       <tr>
         <td>
-        <h2 style="font-weight: 100;"> Zielstrebig. Sympathisch. Innovativ.</h2>
+        <h2 style="font-weight: 100; font-size: 20px; text-align: center !important; letter-spacing: 1px; margin-top: 0px; margin-bottom: 40px;"> Zielstrebig. Sympathisch. Innovativ.</h2>
       </td>
       </tr>
       </thead>
@@ -38,22 +39,22 @@
             <a href="https://www.falke.com/de_de/inspiration/sport/falke-hoffenheim">
           <img src="./images/banner.jpg" alt="TSG 1899 Hoffenheim" style="max-width: 640px;
           width: 100vw;
-          height: auto;"/>
+          height: auto;  margin-bottom: 40px;"/>
         </a>
       </td>
         </tr>
         <tr>
           <td>
-        <h2>
-          FALKE MENSWEAR  ist offizieller Fashion Partner der TSG 1899 Hoffenheim.
-        </h2>
+        <p style="font-weight: 100; font-size: 20px; text-align: center !important; letter-spacing: 1px; margin-bottom: 40px;">
+          FALKE MENSWEAR <br>ist offizieller Fashion Partner der TSG 1899 Hoffenheim.
+        </p>
       </td>
       </tr>
       <tr>
        <td>
         <a href="https://www.falke.com/de_de/inspiration/sport/falke-hoffenheim">
-          <img src="./images/btn_shop-now.png" alt="Shop now" style="max-width:100%; width: 100vw;
-          height: auto;"/>
+          <img src="./images/btn_shop-now.png" alt="Shop now" style="max-width:270px; width: 100vw;
+          height: auto; margin-bottom: 60px;"/>
         </a>
       </td>
       </tr>
