--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body style="width: 100%; background-color:  #F7F7F7; font-family: 'Montserrat', sans-serif;" >
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
     rel="stylesheet">
-      <table style="background-color:  #FFFFFF; max-width: 640px; border-left: 2px solid #e6e6e6; border-right: 2px solid #e6e6e6;" align="center"  width="100%" cellspacing="0" cellpadding="0">
+      <table style="background-color:  #FFFFFF; max-width: 640px;" align="center" width="100%" cellspacing="0" cellpadding="0">
         <thead align="center">
           <tr>
             <td style="text-align: center; padding: 20px;"  >
